<!--
  ~ Copyright (C) 2025 aisleron.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Aisleron</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aisleron</string>
    <string name="nav_header_subtitle">Fly through the shops!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_in_stock">Home Stock</string>
    <string name="menu_needed">Needed</string>
    <string name="menu_all_items">All Items</string>
    <string name="menu_history">History</string>
    <string name="menu_photos">Photos</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_all_shops">All Shops</string>
    <string name="menu_shops">Shops</string>
    <string name="menu_about">About</string>
    <string name="home">Home</string>

    <!-- Preferences -->
    <string name="display_options_header">Display Options</string>
    <string name="show_on_lock_screen">Show on lock screen</string>
    <string name="system_theme">System Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme">Theme</string>
    <string name="backup_restore_title">Backup/Restore</string>
    <string name="backup_database">Backup database</string>
    <string name="restore_database">Restore database</string>
    <string name="backup_folder">Backup folder</string>
    <string name="last_backup">Last backup:</string>
    <string name="last_restore">Last restore:</string>
    <string name="never">Never</string>
    <string name="db_backup_processing">Backup in progress…</string>
    <string name="db_backup_success">Backup completed</string>
    <string name="db_restore_processing">Restore in progress…</string>
    <string name="db_restore_success">Restore completed</string>
    <string name="db_restore_confirmation">Are you sure you want to replace your current database with backup %1$s?</string>
    <string name="db_restore_confirmation_title">Confirm Database Restore</string>
    <string name="backup_folder_success">Backup folder set</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_summary">Prevent the screen from turning off while viewing a list</string>

    <!-- Exception Messages   -->
    <string name="generic_error">ERROR: %1$s</string>
    <string name="delete_default_aisle_exception">ERROR: Default Aisle can\'t be removed</string>
    <string name="duplicate_product_name_exception">ERROR: Product Name must be unique</string>
    <string name="negative_price_exception">ERROR: Price must be positive</string>
    <string name="duplicate_location_name_exception">ERROR: Location Name must be unique</string>
    <string name="duplicate_aisle_name_exception">ERROR: Aisle Name must be unique per list</string>
    <string name="invalid_location_exception">ERROR: Invalid Location Id provided</string>
    <string name="invalid_product_exception">ERROR: Invalid Product Id provided</string>
    <string name="invalid_db_name_exception">ERROR: Unable to determine database name</string>
    <string name="invalid_db_backup_file_exception">ERROR: Invalid backup target</string>
    <string name="invalid_db_restore_file_exception">ERROR: Invalid restore source</string>
    <string name="duplicate_product_exception">ERROR: Cannot add a duplicate of an existing product</string>
    <string name="duplicate_location_exception">ERROR: Cannot add a duplicate of an existing location</string>
    <string name="sample_data_creation_exception">ERROR: Cannot load sample data into an existing database</string>
    <string name="loyalty_card_provider_missing_exception">ERROR: Loyalty card provider not installed or activity not found</string>

    <!-- About Preferences -->
    <string name="about_support_header">Support</string>
    <string name="about_legal_header">Licenses &amp; Policies</string>
    <string name="about_support_version_title">Version history</string>
    <string name="about_support_report_issue_title">Report an issue</string>
    <string name="about_support_sourcecode_title">Source code</string>
    <string name="about_legal_license_title">Aisleron License</string>
    <string name="about_legal_privacy_title">Aisleron Privacy Policy</string>
    <string name="about_support_version_summary">"Current version: %1$s"</string>
    <string name="about_support_report_issue_summary">Log a bug or feature request</string>
    <string name="about_support_sourcecode_summary">View source code on GitHub</string>
    <string name="about_legal_license_summary">GNU Affero General Public License (AGPL) version 3</string>
    <string name="about_legal_privacy_summary">View Privacy Policy online</string>
    <string name="about_support_documentation_title">Documentation</string>
    <string name="about_support_documentation_summary">View documentation online</string>
    <string name="about_legal_3rdparty_title">3rd Party Licenses</string>
    <string name="about_legal_3rdparty_summary">View 3rd party licenses online</string>

    <!-- Welcome Page -->
    <string name="welcome_app_title">Getting Started</string>
    <string name="welcome_message">We\'re excited to help you make your shopping experience easier and more organized. To get started, choose one of the following options:</string>
    <string name="welcome_add_own_product">&lt;h3&gt;Add Your Own Products&lt;/h3&gt; Start building a personalized shopping list from scratch by adding Shops, Aisles, and Products</string>
    <string name="welcome_load_sample_items">&lt;h3&gt;Load Sample Items&lt;/h3&gt; Try out a pre-filled list to get a feel for how the app works</string>
    <string name="welcome_import_db">&lt;h3&gt;Import an Existing Database&lt;/h3&gt; Bring in a shopping list from an earlier backup by importing it from the Settings page</string>
    <string name="welcome_documentation">&lt;h3&gt;View the Documentation&lt;/h3&gt; View the Aisleron documentation online to find out more about the app\'s features</string>
    <string name="welcome_title">Welcome to Aisleron</string>

    <!-- Empty list message strings   -->
    <string name="empty_list_title">This list is currently empty</string>
    <string name="empty_list_description">This could be because:</string>

    <string name="empty_list_reasons">
        - No items are needed at the moment
        \n- No products or aisles have been added yet
        \n- Items exist but aren’t assigned to a visible aisle
    </string>

    <string name="empty_list_instructions">
        You can add products and aisles using the Add button at the bottom right,
        or use the search bar at the top of the screen to find products and update
        their status or aisle assignment.
    </string>

    <!-- URLs -->
    <string name="aisleron_documentation_url">https://aisleron.com/docs/documentation/</string>

    <!-- Loyalty cards -->
    <string name="shop_loyalty_card_name">Loyalty Card</string>
    <string name="loyalty_card">Loyalty card</string>
    <string name="delete_loyalty_card">Delete loyalty card</string>
    <string name="get_loyalty_card">Lookup loyalty card</string>
    <string name="loyalty_card_provider_catima">Catima — Loyalty Card Wallet</string>
    <string name="loyalty_card_provider_missing_title">No loyalty card provider installed</string>
    <string name="loyalty_card_provider_missing_message">&lt;b&gt;&lt;i&gt;%1$s&lt;/i&gt;&lt;/b&gt; is required to display loyalty cards. Would you like to open their website to learn more about it?</string>
    <string name="invalid_loyalty_card_exception">ERROR: Invalid Loyalty Card Id provided</string>

    <!-- Tracking method   -->
    <string name="tracking_mode">Tracking mode</string>
    <string name="tracking_checkbox">Checkbox</string>
    <string name="tracking_quantity">Quantity</string>
    <string name="tracking_checkbox_quantity">Checkbox and Quantity</string>
    <string name="tracking_none">None (swipe only)</string>

    <!-- Misc -->
    <string name="aisle">Aisle</string>
    <string name="product">Product</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="save">Save</string>
    <string name="shop_name">Shop Name</string>
    <string name="add_location">Add Shop</string>
    <string name="edit_product">Edit Product</string>
    <string name="pin_shop">Pin Shop to Drawer</string>
    <string name="show_unmapped_products">Show Products in the \'No Aisle\' section</string>
    <string name="add_aisle">Add Aisle</string>
    <string name="add_another">Add Another</string>
    <string name="aisle_name">Aisle Name</string>
    <string name="id_label">id</string>
    <string name="done">Done</string>
    <string name="search_product_hint">Search Products…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Delete %1$s?</string>
    <string name="edit_aisle">Edit Aisle</string>
    <string name="edit_location">Edit Shop</string>
    <string name="main_fab">Main FAB</string>
    <string name="add_shop_fab">Add Shop FAB</string>
    <string name="add_aisle_fab">Add Aisle FAB</string>
    <string name="add_product_fab">Add Product FAB</string>
    <string name="title_activity_about">About Aisleron</string>
    <string name="shopping_list_options_header">Shopping List Options</string>
    <string name="hide_status_change_snack_bar">Hide status change message</string>
    <string name="status_change_confirmation">%1$s moved to %2$s</string>
    <string name="undo">UNDO</string>

    <string name="aisleron_logo">Aisleron logo</string>
    <string name="in_stock_at_home">In stock at home?</string>
    <string name="shop_logo">Shop Logo</string>
    <string name="recommendation_message_template">Recommended: Go to %1$s — %2$d needed items</string>
    <string name="hello_world_message">hello world!</string>
    <string name="aisle_expand">Aisle expand</string>
    <string name="show_empty_aisles">Show empty aisles</string>
    <string name="mnu_edit_location">Edit shop</string>
    <string name="mnu_sort_list_by_name">Sort by name</string>
    <string name="sort_confirm_title">Confirm Sort</string>
    <string name="sort_confirm_message">Sorting by name will rearrange the list alphabetically and overwrite your current sort order. Do you want to proceed?</string>
    <string name="new_entity_name">New Entity Name</string>
    <string name="new_location_name">New Location Name</string>
    <string name="new_product_name">New Product Name</string>
    <string name="copy_entity_title">Copy %1$s</string>
    <string name="entity_copied">%1$s copied</string>
    <string name="entity_name_required">Name cannot be empty</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="today_recommendations">Today\'s Recommendations</string>
    <string name="add_to_list">Add to List</string>
    
</resources>
